--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,8 +95,8 @@
             android:clickable="true"
             android:id="@+id/txtNewRegister"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="@dimen/h2"
-            android:text="New Register"
+            android:textSize="15sp"
+            android:text="@string/new_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
